added mobile styles for nav bar

--- a/admin.html
+++ b/admin.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="assets/css/plugins/ui.jqgrid.css">
 	<!-- <link rel="stylesheet" href="assets/css/screen.css"> -->
 	<link rel="stylesheet" href="assets/css/styles.css">
+        <meta name="robots" content="noindex, nofollow">
 </head>
 <body class='ui-widget-content'>
 	<header role="banner" class="ui-widget-header">
