--- a/about.html
+++ b/about.html
@@ -6,8 +6,21 @@
 
     <link rel="stylesheet" href="assets/css/plugins/jquery-steps.css">
     <link rel="stylesheet" href="assets/css/styles.css"> <!-- Gem style -->
+    <meta name="description" content="Isaiditbest is the premier debating and commenting competition website. 
+              Debate other users, get the satisfaction of knowing you won the argument, win money, tell 
+              all of your friends.">
+          
+	<title>About I Said It Best </title>
+	<script>  
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-	<title>About I Said It Best!</title>
+  ga('create', 'UA-71789472-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body class='ui-widget-content'>
 	<header role="banner" class="ui-widget-header">
@@ -32,16 +45,21 @@
 		</nav>
 		</center>
 	</header>
+    
 	<h1>About this site</h1>
 	<div class="center-content">
+            <div itemscope itemtype="http://schema.org/PlayAction">
+            <span class="description">
 		<p>
-			Welcome to <b><i>Isaiditbest.com</i></b> . We are the premier debating website that lets you compete with other users to debate questions and news items in many different categories. Unlike, say, the rest of the internet, where you have no idea if you won an online argument or not, every debate ends with a decided winner!
+			Welcome to <b><i>Isaiditbest.com</i></b> . We are the premier debating website that lets you compete with other users to debate and comment upon questions and news items in many different categories. Unlike, say, the rest of the internet, where you have no idea if you won an online argument or not, every debate ends with a decided winner!
+           </span>
+           </div>
 		</p><br>
 		<p>
 			That sounds great. What do I get?
 		</p><br>
 		<p>
-			In addition to the satisfaction of knowing you won an argument, if you compete for money, you have the opportunity to win money when you debate! We have games where each contestant can enter money, with the person who wins the argument winning the money. Even better, after winning an argument, you get to brag to all your friends on Facebook and other social media websites. Winners can display their winning argument to the question directly to social media. Let your friends know how much better you are than them at arguing.
+			In addition to the satisfaction of knowing you won an argument, if you compete for money, you have the opportunity to win money when you debate. We have games where each contestant can enter a certain amount money, with the person who wins the argument winning the money. Even better, after winning an argument, you get to brag to all your friends on Facebook and other social media websites. Winners can display their winning argument to the question directly to social media. Let your friends know how much better you are than them at arguing.
 		</p><br>
 		<h3> How does playing for money work?</h3>
 		<p>
@@ -84,11 +102,11 @@
 			</ol>
 		</p><br>
 		<p>
-			While you are free to choose any category, we do recommend that you pick a category for political issues with the political beliefs that best aligns with yours. There will still be plenty of disagreement even for people who have similar views, but this helps make sure that you arenâ€™t outvoted simply because everyone else is opposed to all of your beliefs.
+			While you are free to choose any category, we do recommend that you pick a category for political issues with the political beliefs that best aligns with yours. There will still be plenty of disagreement even for people who have similar views, but this helps make sure that you aren’t outvoted simply because everyone else is opposed to all of your beliefs.
 		</p>
 		<h3>Are there rankings?</h3>
 		<p>
-			Yes. We have a system of ten different rankings. This letâ€™s you know what a user has done previously. It also gives you a chance to show how great at arguing you are in comparison to everyone else. We use a proprietary algorithm to create our ranking system.
+			Yes. We have a system of ten different rankings. This let’s you know what a user has done previously. It also gives you a chance to show how great at arguing you are in comparison to everyone else. We use a proprietary algorithm to create our ranking system.
 		</p><br>
 		<p>
           (Title or subtitle)  Rankings Explained
