--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Member Profile</title>
+        <meta name="robots" content="noindex">
         <link rel="stylesheet" href="assets/css/file_input.css">
         <link rel="stylesheet" href="assets/css/plugins/jquery-steps.css">
         <link rel="stylesheet" href="assets/css/styles.css">
@@ -23,6 +24,16 @@
                 max-width: 220px;
             }
         </style>
+      <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-71789472-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
     </head>
     <body class='ui-widget-content'>
         <header role="banner" class="ui-widget-header">
