IMPORTANT Cleanup from local dev to  production push
JS Changes
+++++++++++++++++++++++

app.js
- added comments
- hide specific panels in game during init
- reworked rank  display

common.js
- added library file for game.js

game.js
- added more global vars for readability
- added more documentation
- moved non-game specific structures to library
- reworked wait clock display

gameLib.js
- created to implement cleaner game.js

HTML Changes
++++++++++++++++++++++++++

cleanup

--- a/feedback.html
+++ b/feedback.html
@@ -20,9 +20,9 @@
 				<li id='profile'><a href='profile.html'>Profile</a></li>
 				<li id='admin'><a href='admin.html'>Admin</a></li>
 				<li id='about'><a href='about.html'>About</a></li>
-				<li id='logout'><a class="logout ui-state-default" href="#0">Log Out</a></li>
-				<li><a class="cd-signin ui-state-default" href="#0">Sign in</a></li>
-				<li><a class="cd-signup ui-state-default" href="#0">Sign up</a></li>
+				<li id='logout'><a class="logout ui-state-default" href="#">Log Out</a></li>
+				<li><a class="cd-signin ui-state-default" href="#">Sign in</a></li>
+				<li><a class="cd-signup ui-state-default" href="#">Sign up</a></li>
 			</ul>
 		</nav>
 		</center>
