--- a/game.html
+++ b/game.html
@@ -159,7 +159,7 @@
 					</form>
 				</div>
 				<center>
-				<div class='debateVote hidden'>
+				<div class='debateVote'>
 					<form id='debateVote'>
 						<div class="group">
 							<fieldset>
@@ -192,19 +192,7 @@
 	</div>
 </center>
 <div id='placeHolder' class='hidden'></div>
-<!-- <div id='subCatTemplate' class='hidden'>
-	<p>
-		<label for='temp_subCategory'>Sub-Category:</label>
-		<select id='temp_subCategory' name='temp_subCategory' >
-			<option value="">None</option>
-		</select>
-		<label for='temp_CategoryChk' class='subCheck'>Sub?</label>
-		<input id='temp_CategoryChk' type='checkbox' class='subCheck'/>
-		<div class="clear"></div>
-		<span errorfor="temp_subCategory"></span>
-	</p>
-</div> -->
-<div id='gameWait' class='hidden ui-widget-content'>
+<div id='gameWait' class='ui-widget-content hidden'>
 	<center>
 		Your game will start in 10 seconds...
 		<div id='wait_timer' class='countdown_timer'></div>
