--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	Debate other people, so that you can win money and brag to your friends.
 	</div>
 	<!-- <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"> </fb:login-button>
-	<div id="status"> </div> -->
+	<div id="status" class='hidden'> </div> -->
 
 	<div class='modal-window' style='display:none'> <!-- this is the entire modal form, including the background -->
 		<div class="modal-container full-width"> <!-- this is the container wrapper -->
