CSS Changes user-styles.css - added styles for index signup message - '' param options tabs - '' game background - '' winner div - '' paypal form - '' p tags containing textarea
JS Changes
app.js
- migrated bloat to lib file

common.js
- add appLib

appLib.js
- added structures from app

gameLib.js
- added functionality to get "pot" value

game.js
- changed winner div text & styles

game.html
- added paypal button
- center param options
- changed textarea to be more web friendly

--- a/game.html
+++ b/game.html
@@ -41,7 +41,31 @@
 		</nav>
 		</center>
 	</header>
-
+	<span itemscope itemtype="http://schema.org/game" class='payPalForm'>
+	    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank" >
+			<input type="hidden" name="cmd" value="_s-xclick">
+			<input type="hidden" name="hosted_button_id" value="6R95L65VKRXCS">
+			<table>
+				<tr>
+					<td>
+						<input type="hidden" name="on0" value="Purchase Credits">Purchase Credits
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<select name="os0">
+					        <option value="$5.00 Credit">$5.00 Credit $5.30 USD</option>
+					        <option value="$15.00 Credit">$15.00 Credit $15.30 USD</option>
+					        <option value="$30.00">$30.00 $30.30 USD</option>
+						</select> 
+					</td>
+				</tr>
+			</table>
+			<input type="hidden" name="currency_code" value="USD">
+			<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+			<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+		</form>
+	</span>
 	<h1>Game Selection</h1>
 
 	<div id="accordion">
@@ -147,7 +171,7 @@
 								<center>
 								<legend>What do you think?</legend>
 								</center>
-									<div id='players' class='debatePlayers'>Players</div>
+									<div id='players' class='debatePlayers ui-state-default'>Players</div>
 									<p>
 										<label for="thoughts">Thoughts:</label>
 										<textarea rows="15" cols="45" id="thoughts" name="thoughts"></textarea>
@@ -181,7 +205,7 @@
 					<div id='results_footer' class='resultsfooter'></div>
 				</div>
 				<div style="padding: 10px;">
-					<div class="fb-share-button" data-href="http://ISaidItBest.ddns.net/game.html" data-layout="button"></div>
+					<div class="fb-share-button" data-href="http://ISaidItBest.com/game.html" data-layout="button"></div>
 				</div>
 			</center>
 		</div>
