--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 		</nav>
 		</center>
 	</header>
+	<div class='signin-message ui-state-highlight'>Sign in or Sign up to start playing!!!</div>
 	<center>
 		<blockquote>
 			Finally, a website that proves you won the argument.
