minor css changes

--- a/game.html
+++ b/game.html
@@ -172,7 +172,7 @@
 								<legend>What do you think?</legend>
 								</center>
 									<div id='players' class='debatePlayers ui-state-default'>Players</div>
-									<p>
+									<p class="textarea">
 										<label for="thoughts">Thoughts:</label>
 										<textarea rows="15" cols="45" id="thoughts" name="thoughts"></textarea>
 									</p>
