--- a/profile.html
+++ b/profile.html
@@ -165,7 +165,7 @@
                         <input id="avatar" name="avatar" type="file">
                     </div>
                 </p>
-                <p>
+                <p class='textarea'>
                     <label for='bio'>Bio:</label><br />
                     <textarea id='bio' name='bio' cols="50" rows="5"></textarea>
                 </p>
