--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<center>
 		<nav class="main-nav ">
 			<ul>
-				<li id='home'><a href='index.html'>Home (test)</a></li>
+				<li id='home'><a href='index.html'>Home</a></li>
 				<li id='game'><a href='game.html'>Game</a></li>
 				<li id='feedback'><a href='feedback.html'>Feedback</a></li>
 				<li id='profile'><a href='profile.html'>Profile</a></li>
