--- a/game.html
+++ b/game.html
@@ -216,7 +216,7 @@
 	</div>
 </center>
 <div id='placeHolder' class='hidden'></div>
-<div id='gameWait' class='ui-widget-content hidden'>
+<div id='gameWait' class='ui-widget-content no-display'>
 	<center>
 		Your game will start in 10 seconds...
 		<div id='wait_timer' class='countdown_timer'></div>
