minor change to game.html

--- a/game.html
+++ b/game.html
@@ -274,7 +274,7 @@
 		<div id='wait_timer' class='countdown_timer'></div>
 	</center>
 </div>
-<div id='btnTest' class="center-content no-display" style="display:flex;">
+<div id='btnTest' class="center-content hidden" style="display:flex;">
 	<input type='button' value='Load Data' id='LD'/><br>
 	<input type='button' value='Load Comments' id='LC'/><br>
 	<input type='button' value='Toggle Game' id='TG'/><br>
