CSS Changes user-styles - added static header/footer - added relative styles for necessary elements - positioned site quote and added border/background - normalized winnerDiv winnerTitle - background fill for game Div
JS Changes
app
- added test button toggle function for all future test buttons on any page (container: #btnTest)

HMTL Changes
- cleanup

--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
 		</center>
 	</header>
 	<div class='signin-message ui-state-highlight'>Sign in or Sign up to start playing!!!</div>
-	<center>
+	<div class='siteQuote ui-state-default'>
 		<blockquote>
 			Finally, a website that proves you won the argument.
 		</blockquote>
 		<cite>Everybody</cite>
-	</center>
+	</div>
 	<div class='text-content'>
-	Debate other people, so that you can win money and brag to your friends.
+	<h2>Debate other people, so that you can win money and brag to your friends.</h2>
 	</div>
 	<!-- <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"> </fb:login-button>
 	<div id="status" class='hidden'> </div> -->
