--- a/game.html
+++ b/game.html
@@ -42,7 +42,8 @@
 		</center>
 	</header>
 	<span itemscope itemtype="http://schema.org/game" class='payPalForm'>
-	    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank" >
+		<!--<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank" >-->
+	    <form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_blank" >
 			<input type="hidden" name="cmd" value="_s-xclick">
 			<input type="hidden" name="hosted_button_id" value="6R95L65VKRXCS">
 			<table>
