Milestone Added Facebook login functionality
HTML changes
about
- changed tabs to spaces

game
- formatting changes
- added share to FB button for game results

templates
- added login/signup forms as templates
- added game.winner template

JS Changes
app
- added comments for jsdoc
- changed default width of buttons
- added generic "test buttons" function
- check for facebook avatar if logged in through FB
- added function to fire after FB login to record info in db
- fixed logout to remove cookie after setting to null
- changed theme url to https
- moved helper functions to appLib
- remove usersnap code (cost $$$)
- added facebook code and event registration

common
- formatting changes

game
- changed loadWinner function to load template and place data
- (in progress) working on sharing game result with winner png
- add share game results on FB

plugins/html2canvas
- added new plugin to screen scrape and send to FB

main
- consolidated FB code in app.js

The other js files were changed only by formatting and comments

--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@
     <div class='text-content'>
     <h2>Debate other people, so that you can win money and brag to your friends.</h2>
     </div>
-    <!-- <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"> </fb:login-button>
-    <div id="status" class='hidden'> </div> -->
+    <div class="fb-login-button btnLogin" data-max-rows="2" data-scope="public_profile,email,user_friends" data-size="large" data-auto-logout-link="true"></div>
+    <div id='btnTest' class="center-content no-display">
+        <input type='button' value='Test FB' id='fbCall'/><br>
+    </div>
     <script data-main="assets/js/common" src="assets/js/lib/require.js"></script>
     <script>
         require(['common','pages/main']);
